update swagger routers & accidents filter
